basic homepage layout

--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,37 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Luna Alison Alvarez</title>
+		<!--stylesheets-->
 		<link rel="stylesheet" type="text/css" href="./styles/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script|Raleway" rel="stylesheet">
 	</head>
 	<body>
-		<h1 class="name">Luna Alison Alvarez</h1>
-		<h3 class="main">coding. puppies. pizza.</h3>
-		<img src="./img/luna.jpg" alt="luna alison alvarez" class="self">
+		<div class="block">
+			<a href="#">
+				<img src="./img/icons/menu.svg" alt="" class="icon menu">
+			</a>
+			<div class="hide">
+
+			</div>
+			<h1 class="name">Luna Alison Alvarez</h1>
+			<!--<h3 class="tagline">coding. puppies. pizza.</h3>-->
+		</div>
+
+		<div class="bio-container">
+			<img src="./img/pug.jpg" alt="luna alison alvarez" class="self">
+			<p class="bio">
+				Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+				<br>
+				<br>
+				Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides, I've already been through too much shit this morning over this case to hand it over to your dumb ass.
+				<br>
+				<br>
+				Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass.
+			</p>
+		</div>
 	</body>
 </html>
+
+<!--<div id="first_sibling">Some content in the first sibling</div> 
+<div id="second_sibling">and now in the second</div>-->
+
